{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 139,
  "lineage": "0e7655cd-bad0-44a9-3ab9-a2cad0418257",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/frontendIPConfigurations/DevOps-lb-frontend",
                "load_balancer_rules": [
                  "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/loadBalancingRules/DevOps-alb-rule"
                ],
                "name": "DevOps-lb-frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/publicIPAddresses/DevOps-public-ip"
              }
            ],
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer",
            "location": "eastus",
            "name": "DevOps-load-balancer",
            "resource_group_name": "DevOps-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Project": "AzureDevOps"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkInterfaces/DevOps-nic-1/ipConfigurations/internal",
              "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkInterfaces/DevOps-nic-2/ipConfigurations/internal"
            ],
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/backendAddressPools/DevOps-backend-pool",
            "load_balancing_rules": [
              "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/loadBalancingRules/DevOps-alb-rule"
            ],
            "loadbalancer_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer",
            "name": "DevOps-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/probes/DevOps-tcp-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/loadBalancingRules/DevOps-alb-rule"
            ],
            "loadbalancer_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer",
            "name": "DevOps-tcp-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/backendAddressPools/DevOps-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/frontendIPConfigurations/DevOps-lb-frontend",
            "frontend_ip_configuration_name": "DevOps-lb-frontend",
            "frontend_port": 80,
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/loadBalancingRules/DevOps-alb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer",
            "name": "DevOps-alb-rule",
            "probe_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/probes/DevOps-tcp-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_lb_probe.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkInterfaces/DevOps-nic-1",
            "internal_domain_name_suffix": "evlqfubkdrtebgnbb51sfvat3e.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/virtualNetworks/DevOps-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-53-02-62",
            "name": "DevOps-nic-1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "DevOps-resources",
            "tags": {
              "Project": "AzureDevOps"
            },
            "virtual_machine_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Compute/virtualMachines/DevOps-vm-1"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkInterfaces/DevOps-nic-2",
            "internal_domain_name_suffix": "evlqfubkdrtebgnbb51sfvat3e.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/virtualNetworks/DevOps-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-29-89-9B",
            "name": "DevOps-nic-2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "DevOps-resources",
            "tags": {
              "Project": "AzureDevOps"
            },
            "virtual_machine_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Compute/virtualMachines/DevOps-vm-2"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/backendAddressPools/DevOps-backend-pool",
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkInterfaces/DevOps-nic-1/ipConfigurations/internal|/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/backendAddressPools/DevOps-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkInterfaces/DevOps-nic-1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/backendAddressPools/DevOps-backend-pool",
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkInterfaces/DevOps-nic-2/ipConfigurations/internal|/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/loadBalancers/DevOps-load-balancer/backendAddressPools/DevOps-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkInterfaces/DevOps-nic-2"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkSecurityGroups/DevOps-nsg",
            "location": "eastus",
            "name": "DevOps-nsg",
            "resource_group_name": "DevOps-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "internal-inbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "internal-outbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny-internet",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Project": "AzureDevOps"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkSecurityGroups/DevOps-nsg/securityRules/deny-internet",
            "name": "deny-internet",
            "network_security_group_name": "DevOps-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "DevOps-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "internal_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkSecurityGroups/DevOps-nsg/securityRules/internal-inbound",
            "name": "internal-inbound",
            "network_security_group_name": "DevOps-nsg",
            "priority": 200,
            "protocol": "*",
            "resource_group_name": "DevOps-resources",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "internal_inbound_lb_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.5",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkSecurityGroups/DevOps-nsg/securityRules/internal-inbound-lb-vm-0",
            "name": "internal-inbound-lb-vm-0",
            "network_security_group_name": "DevOps-nsg",
            "priority": 201,
            "protocol": "*",
            "resource_group_name": "DevOps-resources",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.4",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkSecurityGroups/DevOps-nsg/securityRules/internal-inbound-lb-vm-1",
            "name": "internal-inbound-lb-vm-1",
            "network_security_group_name": "DevOps-nsg",
            "priority": 202,
            "protocol": "*",
            "resource_group_name": "DevOps-resources",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "internal_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkSecurityGroups/DevOps-nsg/securityRules/internal-outbound",
            "name": "internal-outbound",
            "network_security_group_name": "DevOps-nsg",
            "priority": 200,
            "protocol": "*",
            "resource_group_name": "DevOps-resources",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/publicIPAddresses/DevOps-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.79.137",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "DevOps-public-ip",
            "resource_group_name": "DevOps-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Project": "AzureDevOps"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/virtualNetworks/DevOps-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "DevOps-resources",
            "virtual_network_name": "DevOps-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/virtualNetworks/DevOps-network/subnets/internal",
            "network_security_group_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkSecurityGroups/DevOps-nsg",
            "subnet_id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/virtualNetworks/DevOps-network/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d0025725-1c2a-4066-99a1-0ff722d413ec",
            "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/virtualNetworks/DevOps-network",
            "location": "eastus",
            "name": "DevOps-network",
            "resource_group_name": "DevOps-resources",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/virtualNetworks/DevOps-network/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/46887d31-18dd-4dc7-922d-bfb4ebfa36f1/resourceGroups/DevOps-resources/providers/Microsoft.Network/networkSecurityGroups/DevOps-nsg"
              }
            ],
            "tags": {
              "Project": "AzureDevOps"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}